Bug #58699 cannot build with gcc dbg on solaris